Feat: redis post delete